--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,16 +5,14 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: 1234
-      MYSQL_DATABASE: db
+      MYSQL_DATABASE: test
       MYSQL_USER: user
       MYSQL_PASSWORD: 1234
     ports:
       - "3307:3306"
     volumes:
-      - mysql_master_data:/var/lib/mysql
       - ./config/master.cnf:/etc/mysql/conf.d/master.cnf:ro
       - ./config/master-init.sql:/docker-entrypoint-initdb.d/master-init.sql:ro
-    command: --server-id=1 --log-bin=mysql-bin --binlog-format=ROW
     networks:
       - mysql-network
 
@@ -24,15 +22,13 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: 1234
-      MYSQL_DATABASE: db
+      MYSQL_DATABASE: test
       MYSQL_USER: user
       MYSQL_PASSWORD: 1234
     ports:
       - "3308:3306"
     volumes:
-      - mysql_slave1_data:/var/lib/mysql
       - ./config/slave1.cnf:/etc/mysql/conf.d/slave1.cnf:ro
-    command: --server-id=2 --relay-log=mysql-relay-bin --log-slave-updates=1 --read-only=1
     networks:
       - mysql-network
 
@@ -42,22 +38,15 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: 1234
-      MYSQL_DATABASE: db
+      MYSQL_DATABASE: test
       MYSQL_USER: user
       MYSQL_PASSWORD: 1234
     ports:
       - "3309:3306"
     volumes:
-      - mysql_slave2_data:/var/lib/mysql
       - ./config/slave2.cnf:/etc/mysql/conf.d/slave1.cnf:ro
-    command: --server-id=3 --relay-log=mysql-relay-bin --log-slave-updates=1 --read-only=1
     networks:
       - mysql-network
-
-volumes:
-  mysql_master_data:
-  mysql_slave1_data:
-  mysql_slave2_data:
 
 networks:
   mysql-network:
