--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,37 +1,42 @@
 spring:
   datasource:
     master:
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      jdbc-url: jdbc:mysql://localhost:3307/db?useSSL=false&allowPublicKeyRetrieval=true
+      jdbc-url: jdbc:mysql://localhost:3307/test?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
       username: user
       password: 1234
+      driver-class-name: com.mysql.cj.jdbc.Driver
       hikari:
-        maximum-pool-size: 20
+        maximum-pool-size: 10
         minimum-idle: 5
+        idle-timeout: 300000
         connection-timeout: 30000
+
     slave1:
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      jdbc-url: jdbc:mysql://localhost:3308/db?useSSL=false&allowPublicKeyRetrieval=true
+      jdbc-url: jdbc:mysql://localhost:3308/test?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
       username: user
       password: 1234
+      driver-class-name: com.mysql.cj.jdbc.Driver
       hikari:
-        maximum-pool-size: 20
+        maximum-pool-size: 10
         minimum-idle: 5
+        idle-timeout: 300000
         connection-timeout: 30000
+
     slave2:
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      jdbc-url: jdbc:mysql://localhost:3309/db?useSSL=false&allowPublicKeyRetrieval=true
+      jdbc-url: jdbc:mysql://localhost:3309/test?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
       username: user
       password: 1234
+      driver-class-name: com.mysql.cj.jdbc.Driver
       hikari:
-        maximum-pool-size: 20
+        maximum-pool-size: 10
         minimum-idle: 5
+        idle-timeout: 300000
         connection-timeout: 30000
+
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
     properties:
       hibernate:
         format_sql: true
-        dialect: org.hibernate.dialect.MySQLDialect
